# cse-220

./: .gitignore  .pre-commit-config.yaml  README.md  dev-setup.ps1  dev-setup.sh  eslint.config.mjs  nx.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml  e2e.yml
apps/api/: README.md  manage.py  project.json  pyproject.toml
apps/api/api/: __init__.py  exceptions.py  health.py  rest.py  serializers.py  services.py  urls.py
apps/api/config/: asgi.py  bootstrap.py  settings.py  urls.py  wsgi.py
apps/api/data/: istanbul_restaurants_seed.json
apps/api/files/: models.py  repositories.py  services.py  storage.py  urls.py  views.py
apps/api/restaurants/: admin.py  dtos.py  models.py  repositories.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/api/reviews/: admin.py  dtos.py  models.py  repositories.py  serializers.py  services.py  urls.py  views.py
apps/api/scripts/: scrape_google_maps.mjs
apps/web/: components.json  next.config.js  package.json  project.json
apps/web-e2e/: playwright.config.ts
docs/: API_NX_COMMANDS.md  DEVELOPMENT_PLAN.md  DISCOVERY_REVIEW_PRD.md  TECHNICAL_SPECIFICATION.md
libs/api-http/: .gitignore  README.md  project.json  pyproject.toml
libs/api-http/api_http/: __init__.py  constants.py  controller.py  decorators.py  errors.py  framework.py  guards.py  methods.py  responses.py  route.py  route_definition.py  routing.py  types.py  urlpatterns.py  use.py  utils.py
libs/api-http/tests/: conftest.py  test_framework.py
libs/ui/: README.md
(+145 files in other folders)
