[tool.poetry]
name = "api-http"
version = "0.1.0"
description = "Decorator-driven HTTP controller toolkit for Django"
authors = []
license = "Proprietary"
readme = "README.md"

[[tool.poetry.packages]]
include = "api_http"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
django = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
